Add loader and favicon

--- a/index.html
+++ b/index.html
@@ -2,23 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/assets/imgs/favicon/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/imgs/favicon/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/imgs/favicon/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/imgs/favicon/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="/assets/imgs/favicon/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/imgs/favicon/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/assets/imgs/favicon/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/assets/imgs/favicon/apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="/assets/imgs/favicon/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="/assets/imgs/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="/assets/imgs/favicon/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="/assets/imgs/favicon/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="/assets/imgs/favicon/favicon-128.png" sizes="128x128" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/src/assets/imgs/favicons/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/src/assets/imgs/favicons/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/src/assets/imgs/favicons/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/src/assets/imgs/favicons/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="/src/assets/imgs/favicons/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/src/assets/imgs/favicons/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/src/assets/imgs/favicons/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/src/assets/imgs/favicons/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="/src/assets/imgs/favicons/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="/src/assets/imgs/favicons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="/src/assets/imgs/favicons/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/src/assets/imgs/favicons/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/src/assets/imgs/favicons/favicon-128.png" sizes="128x128" />
     <title>Raoul Gaillard - Portfolio</title>
   </head>
   <body>
+
+    <div class="loader-container">
+      <div class="loader">
+        <div class="loader__text">
+          <img src="/src/assets/imgs/loading.svg" alt="">
+        </div>
+        <div class="loader__lines">
+          <div class="loader__thin-line"></div>
+          <div class="loader__big-line"></div>
+        </div>
+      </div>
+    </div>
+    <script src="/dist/loader.build.js"></script>
+
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <script src="/dist/app.build.js"></script>
   </body>
 </html>
