--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
           <div class="loader__thin-line"></div>
           <div class="loader__big-line"></div>
         </div>
+        <div class="loader__state">
+        </div>
       </div>
     </div>
     <script src="/dist/loader.build.js"></script>
