--- a/index.html
+++ b/index.html
@@ -19,23 +19,7 @@
     <title>Raoul Gaillard - Portfolio</title>
   </head>
   <body>
-
-    <div class="loader-container">
-      <div class="loader">
-        <div class="loader__text">
-          <img src="/src/assets/imgs/loading.svg" alt="">
-        </div>
-        <div class="loader__lines">
-          <div class="loader__thin-line"></div>
-          <div class="loader__big-line"></div>
-        </div>
-        <div class="loader__state">
-        </div>
-      </div>
-    </div>
-    <script src="/dist/loader.build.js"></script>
-
     <div id="app"></div>
-    <script src="/dist/app.build.js"></script>
+    <script src="./dist/app.build.js"></script>
   </body>
 </html>
