--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="../dist/app.build.js"></script>
+    <script src="/dist/app.build.js"></script>
   </body>
 </html>
