Add better page title for seo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" href="/assets/imgs/favicons/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/assets/imgs/favicons/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="/assets/imgs/favicons/favicon-128.png" sizes="128x128" />
-    <title>Raoul Gaillard - Portfolio</title>
+    <title>Raoul Gaillard - Front-end developer and Ui designer</title>
   </head>
   <body>
     <div id="app"></div>
