--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="icon" type="image/png" href="/assets/imgs/favicons/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="/assets/imgs/favicons/favicon-128.png" sizes="128x128" />
     <title>Raoul Gaillard - Front-end developer and Ui designer</title>
+    <meta name="description" content="Portfolio of Raoul Gaillard. Paris based interactive designer and developer.
+     Currently student in fourth year at HETIC and looking for a 6-month internship." />
   </head>
   <body>
     <div id="app"></div>
