--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
     <link rel="icon" type="image/png" href="/assets/imgs/favicons/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="/assets/imgs/favicons/favicon-128.png" sizes="128x128" />
     <title>Raoul Gaillard - Front-end developer and Ui designer</title>
+
+    <meta property="og:url" content="https://www.raoul-gaillard.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Raoul Gaillard - Interactive Developer and Designer">
+    <meta property="og:description" content="Portfolio of Raoul Gaillard. Paris based interactive designer and developer.
+     Currently student in fourth year at HETIC and looking for a 6-month internship.">
+    <meta property="og:image" content="https://www.raoul-gaillard.com/assets/imgs/share/open-graph.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@RaoulGaillard">
+    <meta name="twitter:creator" content="@RaoulGaillard">
+    <meta name="twitter:title" content="Raoul Gaillard - Interactive Developer and Designer">
+    <meta name="twitter:description" content="Portfolio of Raoul Gaillard. Paris based interactive designer and developer.
+     Currently student in fourth year at HETIC and looking for a 6-month internship.">
+    <meta name="twitter:image" content="https://www.raoul-gaillard.com/assets/imgs/share/open-graph.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
     <meta name="description" content="Portfolio of Raoul Gaillard. Paris based interactive designer and developer.
      Currently student in fourth year at HETIC and looking for a 6-month internship." />
   </head>
